[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
    "setuptools>=42",
    "wheel",
    "cmake>=3.12",
    "ninja",  # Optional, for Ninja builds
]
build-backend = "scikit_build_core.build"

[project]
name = "craftground"
version = "2.5.30"
description = "Lightweight Minecraft Environment for Reinforcement Learning"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "yhs0602", email = "jourhyang123@gmail.com" }
]
keywords = ["minecraft", "reinforcement learning", "environment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "gymnasium",
    "Pillow",
    "numpy",
    "protobuf",
    "typing_extensions",
    "psutil",
    "torch",
]

[project.urls]
Source = "https://github.com/yhs0602/CraftGround"
Tracker = "https://github.com/yhs0602/CraftGround/issues"


[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.black]
force-exclude = 'pybind11'
extend-exclude = '''
/(
\.git
| venv
| build
| dist
| pybind11
| src/cpp
| src/craftground/proto
| src/craftground/MinecraftEnv
)/
'''
line-length = 88

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "src/cpp",
    "build",
    "dist",
    "pybind11",
    "src/craftground/MinecraftEnv",
    "src/craftground/proto",
]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = [
    # PEP 8 recommends to treat : in slices as a binary operator with the lowest priority, and to leave an equal
    # amount of space on either side, except if a parameter is omitted (e.g. ham[1 + 1 :]).
    # This behaviour may raise E203 whitespace before ':' warnings in style guide enforcement tools like Flake8.
    # Since E203 is not PEP 8 compliant, we tell Flake8 to ignore this warning.
    # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices    
    "E203"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]